# agent-cli-tools

./: .gitignore  README.md  TEST.md  conftest.py  pyproject.toml
.claude/: CLAUDE.md  CODING_RULES.md
.ralph/: config.yaml
.ralph/add/: GOAL.md  plan.md  prd.json  progress.md  test.md
.ralph/add_more_tools/: GOAL.md  plan.md  plan_add_config.md  prd.json  progress.md  test.md
.ralph/minions-tool/: GOAL.md  plan.md  prd.json  progress.md  test.md
.ralph/ocr-tools/: GOAL.md  plan.md  prd.json  test.md
.ralph/ocr-tools/state/: current_prompt.md
specs/: add_more_tools.md
